# nano

./: .gitignore  Cargo.toml  README.md
.github/workflows/: Release.yml
src/: analyzer.rs  build.rs  composer.rs  i18n.rs  lib.rs  main.rs  registry.rs  types.rs  zip.rs
tests/: analyzer.rs  build.rs  composer.rs  i18n.rs
tests/i18n/lang/en/: general.yml
