[package]
name = "nano"
version = "0.1.0"
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
git2 = "0.13"
log = { version = "0.4", features = ["std"] }
pretty_env_logger = "0.4"
regex = "1.3"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
tokio = { version = "0.2", features = ["macros", "process", "fs", "stream"] }
walkdir = "2.3"
yaml-rust = "0.4"
zip = "0.5"
