[package]
name = "nano"
version = "0.2.4"
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
git2 = "0.16"
log = { version = "0.4", features = ["std"] }
pretty_env_logger = "0.4"
regex = "1.7"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.24", features = [
    "macros",
    "process",
    "fs",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1", features = ["fs"] }
walkdir = "2.3"
yaml-rust = "0.4"
zip = "0.6"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"
